change font color black to white

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ img {
     flex-direction: column;
     gap: 2em;
     align-items: center;
-    color: #000000;
+    color: #ffffff;
 }
 
 .content {
