--- a/style.css
+++ b/style.css
@@ -100,13 +100,13 @@ img {
     color: #ffffff;
 }
 
-.conteneur img {
-    display: block; /* Pour que l'image occupe toute la largeur disponible */
-    margin: 0 auto; /* Pour centrer l'image horizontalement */
-}
-
 .content {
     width: 80%;
+}
+
+.content img {
+    display: block; /* Pour que l'image occupe toute la largeur disponible */
+    margin: 0 auto; /* Pour centrer l'image horizontalement */
 }
 
 .fs-18{
