--- a/style.css
+++ b/style.css
@@ -204,3 +204,16 @@ footer {
     margin-bottom: 20px; /* Augmente l'espace sous le paragraphe */
     text-align: center; /* Centre le texte à l'intérieur */
 }
+/* Ajoutez ces styles à votre feuille de style CSS */
+
+/* Style du lien */
+.lien {
+    color: white; /* Couleur du texte du lien */
+    text-decoration: underline; /* Soulignement du texte du lien */
+    cursor: pointer; /* Curseur au survol du lien */
+}
+
+/* Style du lien au survol */
+.lien:hover {
+    color: pink; /* Couleur du texte du lien au survol */
+}
